avance de nav, header y parte del main de html/css

--- a/pricing/pricing.css
+++ b/pricing/pricing.css
@@ -1,5 +1,58 @@
+@font-face {
+  font-family: 'Netflix Sans';
+  font-weight: 100;
+  font-display: optional;
+  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff) format('woff')
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  font-weight: 300;
+  font-display: optional;
+  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Lt.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Lt.woff) format('woff')
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  font-weight: 400;
+  font-display: optional;
+  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff) format('woff')
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  font-weight: 700;
+  font-display: optional;
+  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff) format('woff')
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  font-weight: 800;
+  font-display: optional;
+  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Bd.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Bd.woff) format('woff')
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  font-weight: 900;
+  font-display: optional;
+  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff) format('woff')
+}
+
+* {
+  letter-spacing: 0 !important;
+}
+
 body {
   background-color: #fff;
+  font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+  background-image: linear-gradient(180deg, var(--bs-secondary-bg), var(--bs-body-bg) 100px, var(--bs-body-bg));
+}
+
+.header-img {
+  width: 167px;
+  margin: 25px 39px 20px;
 }
 
 .container {
@@ -8,11 +61,54 @@ body {
 }
 
 .pricing-header {
-  max-width: 700px;
+  max-width: 945px;
 }
 
-header {
-  margin-inline: 10px;
+.table-responsive {
+  max-width: 930px;
+  margin-inline: 180px;
+}
+
+.bottom {
+  max-width: 920px;
+  margin-inline: 190px;
+}
+
+.header-text3 {
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+nav {
+  margin: 0px 40px 5px !important;
+}
+
+#chulo {
+  position: relative;
+  top: 5px;
+}
+
+.iniciar {
+  font-size: 19px;
+  font-weight: 600;
+  color: #333333;
+}
+
+.iniciar:hover {
+  text-decoration: underline !important;
+}
+
+.header-text1 {
+  font-size: 13px;
+  margin-block: 8px 5px;
+  color: #333333;
+}
+
+.header-text2 {
+  font-size: 32px;
+  font-weight: 600;
+  color: #333333;
+  margin-bottom: 10px;
 }
 
 .bd-placeholder-img {
